# dyploma

./: .gitignore  .isort.cfg  Dockerfile  Makefile  README.md  config.json  config.json.example  pipeline.py  setup.cfg  sweep.config.json  sweep.config.json.example
augments/: augmentation_to_module.py  simple_augmentation.py
data/: event_log_data_module.py
data/datasets/: base_event_loader.py  dataset.py  dataset_to_module.py
data/datasets/bpi2012/: loader.py  readme.md
embeddings/: act2vec.py  base.py  slug_to_class.py
embeddings/Act2Vec_cache/: bpi2012_d86945f3-2fbe-4790-bdb6-5af11a32034c.model  bpi2012w_5d182957-2a40-40d7-99f2-3dd8a9755366.model  bpi2017_5bdc41fa-d7c6-4a80-81c3-64356caa6e04.model  bpi2017_5d266c2c-87e8-4631-994f-38ab37869e46.model  bpi2017_f275e0a2-029c-43c5-87db-9bd82359b1f3.model  bpi2017w_64_size_a6e18c14-7829-4c73-a4d8-10a53832cadc.model  bpi2017w_edb8dbcf-70b3-45f4-9919-f5866ff4c291.model  helpdesk_31543f86-b798-4e1a-943d-3f06545eeb51.model  helpdesk_461d419d-a931-46c5-9d06-f229ea0dc590.model
layers/: attention.py  debug.py
models/: attentive_ggnn.py  slug_to_class.py
preprocessing/: graph_builders.py  preprocessor_to_module.py  preprocessors.py
raw_data/bpi2012/: bpi2012_test.csv  bpi2012_val.csv
raw_data/bpi2012w/: bpi2012w_test.csv  bpi2012w_train.csv  bpi2012w_val.csv
raw_data/bpi2017/: bpi2017_test.csv  bpi2017_val.csv
raw_data/bpi2017w/: bpi2017w_test.csv  bpi2017w_val.csv
raw_data/helpdesk/: helpdesk_test.csv  helpdesk_train.csv  helpdesk_val.csv
utils/: colors.py  helpers.py  wrappers.py
(+7 files in other folders)
